--- a/GullyTrends/Base.lproj/Main.storyboard
+++ b/GullyTrends/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES" initialViewController="bvA-Gx-XPl">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES" initialViewController="5IY-Hp-MWf">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -383,10 +383,10 @@
             </objects>
             <point key="canvasLocation" x="2559" y="-5"/>
         </scene>
-        <!--Main View Controller-->
+        <!--Main View-->
         <scene sceneID="jZ6-Nu-3CT">
             <objects>
-                <viewController storyboardIdentifier="MainViewController" id="Z2I-Sz-A3d" customClass="MainViewController" customModule="GullyTrends" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MainView" id="Z2I-Sz-A3d" customClass="MainView" customModule="GullyTrends" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="RX0-GO-ibe"/>
                         <viewControllerLayoutGuide type="bottom" id="X92-Ax-75B"/>
@@ -673,9 +673,6 @@
                                         <constraint firstItem="bmC-b8-tgK" firstAttribute="centerY" secondItem="yOb-Sh-twj" secondAttribute="centerY" constant="-2" id="wAt-4i-h6j"/>
                                     </constraints>
                                 </tableViewCellContentView>
-                                <connections>
-                                    <segue destination="uU3-FU-DUe" kind="modal" modalPresentationStyle="fullScreen" id="jOK-fV-aMF"/>
-                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -2965,14 +2962,14 @@
         <image name="girl" width="42" height="42"/>
         <image name="google-btn" width="110" height="56"/>
         <image name="location-icon" width="13.5" height="19"/>
-        <image name="logo" width="90.5" height="44"/>
+        <image name="logo" width="190.5" height="90.5"/>
         <image name="love-icon" width="13.5" height="12"/>
         <image name="magnifyingglass" catalog="system" width="64" height="56"/>
         <image name="menu" width="22" height="22"/>
         <image name="menu-icon" width="22" height="15"/>
         <image name="menu_cart-icon" width="18.5" height="23"/>
         <image name="menu_wishlist-icon" width="18" height="24"/>
-        <image name="search-icon" width="12.5" height="18"/>
+        <image name="search-icon" width="8.5" height="11.5"/>
         <image name="seller-name-link-arrow" width="12" height="7"/>
         <image name="seller-name-star" width="6.5" height="6"/>
         <image name="sign-in-btn" width="222" height="54.5"/>
