--- a/GullyTrends/ViewControllers/HomeShopping/FirstTableViewCell.xib
+++ b/GullyTrends/ViewControllers/HomeShopping/FirstTableViewCell.xib
@@ -21,19 +21,23 @@
                         <rect key="frame" x="10" y="5" width="302" height="145"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Shanvi Fashion Botique" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WAH-71-aoZ">
-                                <rect key="frame" x="110" y="40" width="170" height="15"/>
+                                <rect key="frame" x="114" y="35" width="170" height="15"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="170" id="Pc6-Nf-x80"/>
                                     <constraint firstAttribute="height" constant="15" id="REM-yM-9gb"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jWQ-Sk-x55">
-                                <rect key="frame" x="194" y="107" width="88" height="30"/>
+                                <rect key="frame" x="153" y="118" width="90" height="22"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <color key="tintColor" red="0.29604125019999999" green="0.089504100380000007" blue="0.49808865790000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="22" id="RDZ-81-Ele"/>
+                                    <constraint firstAttribute="width" constant="90" id="llX-bV-fON"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <state key="normal" title="Book Now">
                                     <color key="titleColor" red="0.29604125019999999" green="0.089504100380000007" blue="0.49808865790000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
@@ -68,21 +72,85 @@
                                     <constraint firstAttribute="width" constant="80" id="EHE-Rs-DJg"/>
                                 </constraints>
                             </stackView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="k6f-t5-w5u">
+                                <rect key="frame" x="110" y="56" width="172" height="36"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="locationicon" translatesAutoresizingMaskIntoConstraints="NO" id="HBh-Lm-6uH">
+                                        <rect key="frame" x="13" y="7" width="15" height="15"/>
+                                        <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="15" id="Cgs-KF-mqL"/>
+                                            <constraint firstAttribute="height" constant="15" id="bv7-Wk-6Xf"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="500028,  13-6-7-236/126 Gudi Market Malkapur" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XKi-J8-GOU">
+                                        <rect key="frame" x="35" y="3" width="140" height="28"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="140" id="IJE-wA-Vvt"/>
+                                            <constraint firstAttribute="height" constant="28" id="dk9-Qx-buI"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="HBh-Lm-6uH" firstAttribute="leading" secondItem="k6f-t5-w5u" secondAttribute="leading" constant="13" id="0XM-sm-FF4"/>
+                                    <constraint firstItem="XKi-J8-GOU" firstAttribute="top" secondItem="k6f-t5-w5u" secondAttribute="top" constant="3" id="52R-SY-5s7"/>
+                                    <constraint firstItem="HBh-Lm-6uH" firstAttribute="top" secondItem="k6f-t5-w5u" secondAttribute="top" constant="7" id="Bfw-vT-ZMj"/>
+                                    <constraint firstItem="XKi-J8-GOU" firstAttribute="leading" secondItem="HBh-Lm-6uH" secondAttribute="trailing" constant="7" id="P3W-bP-47c"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hiL-TL-OKi">
+                                <rect key="frame" x="110" y="94" width="172" height="19"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="9052784394" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i47-25-cch">
+                                        <rect key="frame" x="35" y="3" width="137" height="12"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mobile-icon" translatesAutoresizingMaskIntoConstraints="NO" id="b2H-5c-GAb">
+                                        <rect key="frame" x="13" y="2" width="15" height="15"/>
+                                        <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="15" id="CdW-1z-nOJ"/>
+                                            <constraint firstAttribute="height" constant="15" id="V18-wA-4yZ"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="i47-25-cch" firstAttribute="leading" secondItem="b2H-5c-GAb" secondAttribute="trailing" constant="7" id="4Dq-r1-AMz"/>
+                                    <constraint firstItem="b2H-5c-GAb" firstAttribute="leading" secondItem="hiL-TL-OKi" secondAttribute="leading" constant="13" id="93G-0t-Hs2"/>
+                                    <constraint firstItem="i47-25-cch" firstAttribute="top" secondItem="hiL-TL-OKi" secondAttribute="top" constant="3" id="X2q-IT-LoK"/>
+                                    <constraint firstAttribute="bottom" secondItem="b2H-5c-GAb" secondAttribute="bottom" constant="2" id="beb-Oo-KYF"/>
+                                    <constraint firstItem="i47-25-cch" firstAttribute="leading" secondItem="b2H-5c-GAb" secondAttribute="trailing" constant="7" id="egU-ag-LL2"/>
+                                    <constraint firstAttribute="bottom" secondItem="i47-25-cch" secondAttribute="bottom" constant="4" id="gDD-HI-0wC"/>
+                                    <constraint firstItem="b2H-5c-GAb" firstAttribute="top" secondItem="hiL-TL-OKi" secondAttribute="top" constant="2" id="qJM-jD-GDX"/>
+                                    <constraint firstAttribute="trailing" secondItem="i47-25-cch" secondAttribute="trailing" id="twt-UL-VNo"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="0.2497997632" green="0.060029590620000003" blue="0.78203934590000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="OwP-Z0-PyY" firstAttribute="top" secondItem="1sS-ve-bzr" secondAttribute="top" constant="10" id="0f9-oa-lpA"/>
-                            <constraint firstItem="WAH-71-aoZ" firstAttribute="leading" secondItem="CjK-Sp-8Vn" secondAttribute="trailing" constant="10" id="0kA-op-Ohg"/>
+                            <constraint firstItem="WAH-71-aoZ" firstAttribute="leading" secondItem="CjK-Sp-8Vn" secondAttribute="trailing" constant="14" id="0kA-op-Ohg"/>
                             <constraint firstAttribute="bottom" secondItem="CjK-Sp-8Vn" secondAttribute="bottom" constant="19" id="5Co-PE-zaU"/>
-                            <constraint firstAttribute="bottom" secondItem="jWQ-Sk-x55" secondAttribute="bottom" constant="8" id="LZh-Qd-1v4"/>
-                            <constraint firstItem="WAH-71-aoZ" firstAttribute="top" secondItem="OwP-Z0-PyY" secondAttribute="bottom" constant="10" id="PUr-HC-lrP"/>
-                            <constraint firstAttribute="trailing" secondItem="jWQ-Sk-x55" secondAttribute="trailing" constant="20" id="ZcD-Ak-qRc"/>
-                            <constraint firstAttribute="trailing" secondItem="WAH-71-aoZ" secondAttribute="trailing" constant="22" id="dGM-fd-3ed"/>
-                            <constraint firstItem="jWQ-Sk-x55" firstAttribute="leading" secondItem="CjK-Sp-8Vn" secondAttribute="trailing" constant="94" id="elN-bj-jMV"/>
+                            <constraint firstItem="WAH-71-aoZ" firstAttribute="top" secondItem="OwP-Z0-PyY" secondAttribute="bottom" constant="5" id="PUr-HC-lrP"/>
+                            <constraint firstAttribute="bottom" secondItem="jWQ-Sk-x55" secondAttribute="bottom" constant="5" id="V0j-X9-yvl"/>
+                            <constraint firstItem="jWQ-Sk-x55" firstAttribute="leading" secondItem="CjK-Sp-8Vn" secondAttribute="trailing" constant="53" id="Vgi-XV-Tbw"/>
+                            <constraint firstItem="hiL-TL-OKi" firstAttribute="leading" secondItem="CjK-Sp-8Vn" secondAttribute="trailing" constant="10" id="ZsQ-Xw-RUT"/>
+                            <constraint firstAttribute="trailing" secondItem="WAH-71-aoZ" secondAttribute="trailing" constant="18" id="dGM-fd-3ed"/>
                             <constraint firstAttribute="trailing" secondItem="OwP-Z0-PyY" secondAttribute="trailing" constant="20" id="gvX-bg-kpx"/>
+                            <constraint firstItem="jWQ-Sk-x55" firstAttribute="top" secondItem="hiL-TL-OKi" secondAttribute="bottom" constant="5" id="hJe-sO-fFZ"/>
                             <constraint firstAttribute="height" constant="145" id="hmG-or-qsT"/>
+                            <constraint firstAttribute="trailing" secondItem="hiL-TL-OKi" secondAttribute="trailing" constant="20" id="n3o-qy-gwf"/>
+                            <constraint firstItem="k6f-t5-w5u" firstAttribute="leading" secondItem="CjK-Sp-8Vn" secondAttribute="trailing" constant="10" id="rK2-AW-OSu"/>
                             <constraint firstItem="CjK-Sp-8Vn" firstAttribute="top" secondItem="1sS-ve-bzr" secondAttribute="top" constant="20" id="tkM-Nq-7DX"/>
+                            <constraint firstItem="hiL-TL-OKi" firstAttribute="top" secondItem="k6f-t5-w5u" secondAttribute="bottom" constant="2" id="uqZ-GY-Tmb"/>
                             <constraint firstItem="CjK-Sp-8Vn" firstAttribute="leading" secondItem="1sS-ve-bzr" secondAttribute="leading" constant="10" id="xrx-ou-wC1"/>
+                            <constraint firstAttribute="trailing" secondItem="k6f-t5-w5u" secondAttribute="trailing" constant="20" id="ydZ-1E-7lg"/>
+                            <constraint firstItem="k6f-t5-w5u" firstAttribute="top" secondItem="WAH-71-aoZ" secondAttribute="bottom" constant="6" id="ym0-ON-hlV"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
@@ -94,7 +162,7 @@
                 <color key="backgroundColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
                 <constraints>
                     <constraint firstItem="1sS-ve-bzr" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="3Kg-rE-3aX"/>
-                    <constraint firstAttribute="bottom" secondItem="1sS-ve-bzr" secondAttribute="bottom" constant="11" id="RWo-AV-9Bs"/>
+                    <constraint firstAttribute="bottom" secondItem="1sS-ve-bzr" secondAttribute="bottom" constant="5" id="RWo-AV-9Bs"/>
                     <constraint firstItem="1sS-ve-bzr" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="pP7-pH-Z6L"/>
                     <constraint firstAttribute="trailing" secondItem="1sS-ve-bzr" secondAttribute="trailing" constant="5" id="tNK-0J-xBD"/>
                 </constraints>
@@ -104,11 +172,13 @@
                 <outlet property="Btn" destination="jWQ-Sk-x55" id="v3i-Xr-JMc"/>
                 <outlet property="lblTitle" destination="WAH-71-aoZ" id="ZQB-Mg-1Ux"/>
             </connections>
-            <point key="canvasLocation" x="137.68115942028987" y="160.04464285714286"/>
+            <point key="canvasLocation" x="13.043478260869566" y="109.82142857142857"/>
         </tableViewCell>
     </objects>
     <resources>
         <image name="girl" width="42" height="42"/>
+        <image name="locationicon" width="9.5" height="13.5"/>
+        <image name="mobile-icon" width="7.5" height="13"/>
         <image name="star-fill" width="11" height="10"/>
         <image name="star-outline" width="11" height="10"/>
     </resources>
